--- a/notebooks/unit1/unit1.ipynb
+++ b/notebooks/unit1/unit1.ipynb
@@ -638,8 +638,27 @@
         "# TODO: Define a PPO MlpPolicy architecture\n",
         "# We use MultiLayerPerceptron (MLPPolicy) because the input is a vector,\n",
         "# if we had frames as input we would use CnnPolicy\n",
-        "model ="
+        "model = PPO(\n",
+        "    policy=\"MlpPolicy\",\n",
+        "    env=env,\n",
+        "    n_steps=1024,\n",
+        "    batch_size=64,\n",
+        "    n_epochs=4,\n",
+        "    gamma=0.999,\n",
+        "    gae_lambda=0.98,\n",
+        "    ent_coef=0.01,\n",
+        "    verbose=1,\n",
+        ")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_t5Jb3nduui4"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -716,7 +735,7 @@
       "source": [
         "# SOLUTION\n",
         "# Train it for 1,000,000 timesteps\n",
-        "model.learn(total_timesteps=1000000)\n",
+        "model.learn(total_timesteps=10000)\n",
         "# Save the model\n",
         "model_name = \"ppo-LunarLander-v2\"\n",
         "model.save(model_name)"
